--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="jquery-3.3.1.min.js"></script>
     <script src="workings.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <audio autoplay loop><source src="backgroundmusic.mp3"> </audio>
 </head>
 <body>
     <div id=whole>
